--- a/main.html
+++ b/main.html
@@ -8,9 +8,99 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>HTML Assignment #3</h1>
+	<!-- table 1 -->
+	<table id='table-1' class='middle' border>
+		<thead>
+			<tr></tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td class='t11'>left</td>
+				<td class='center t12'>center</td>
+				<td class='right t13'>right</td>
+			</tr>
+			<tr>
+				<td>left</td>
+				<td class='center'>center</td>
+				<td class='right'>right</td>
+			</tr>
+			<tr>
+				<td>left</td>
+				<td class='center'>center</td>
+				<td class='right'>right</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<!-- table 2 -->
+	<table id='table-2' class='middle' border>
+		<thead></thead>
+		<tbody>
+			<tr>
+				<td colspan=6 id='t21'>1</td>
+			</tr>
+
+			<tr>
+				<td rowspan=4>1</td>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+			</tr>
+
+			<tr>
+				<td>1</td>
+				<td rowspan=2 colspan=3>1</td>
+				<td>1</td>
+			</tr>
+
+			<tr>
+				<td>1</td>
+				<td>1</td>
+			</tr>
+
+			<tr>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+				<td>1</td>
+			</tr>
+
+			<tr>
+				<td colspan=6>1</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<!-- table 3 -->
+	<table id='table-3' class='middle' border>
+		<tbody>
+			<tr class='green'>
+				<td></td>
+			</tr>
+			<tr>
+				<td id='t-image'>
+					<img src='https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg' />
+				</td>
+			</tr>
+			<tr class='blue'>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
 </html>
+
+
+
+
+
+
+
