--- a/main.html
+++ b/main.html
@@ -16,9 +16,9 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td class='t11'>left</td>
-				<td class='center t12'>center</td>
-				<td class='right t13'>right</td>
+				<td id='t11'>left</td>
+				<td class='center' id='t12'>center</td>
+				<td class='right' id='t13'>right</td>
 			</tr>
 			<tr>
 				<td>left</td>
